--- a/index.html
+++ b/index.html
@@ -1,5 +1,623 @@
+Skip to main content
+Google Classroom
+Classroom
+Web Development-17May 2025
+12:30pm-02:30pm(SS)-Rahul Sir
+Home
+Calendar
+Enrolled
+To do
+W
+Web Development-17May 2025
+12:30pm-02:30pm(SS)-Rahul Sir
+J
+Java-19 May 2025
+6:30pm-7:30pm(MTWF)-Rahul Chauhan Sir
+W
+Web Development-16 June 2025
+2:30pm-4:00pm(MTWF)
+H
+HPC internship 2025
+JIIT, JU, JUIT, JUET
+Archived classes
+Settings
+Stream
+Classwork
+People
+Stream
+Web Development-17May 2025
+12:30pm-02:30pm(SS)-Rahul Sir
+Upcoming
+Woohoo, no work due in soon!
+
+Announce something to your class
+
+Post by incapp incapp
+incapp incapp
+Created 14:1814:18
+Your WD Class is ON Today at 2:30pm.
+
+Add class comment…
 
 
+Post by incapp incapp
+incapp incapp
+Created 20 Aug20 Aug
+Web Development:
+https://youtube.com/playlist?list=PLlJ9P0HrooOMo0VgD99Df2MAsTGkMXoed&si=GH0YmmH1q1MyAKdL
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 20 Aug20 Aug (Edited 20 Aug)
+https://incappclassroom23.github.io/portfolio2/
+
+app-release.apk
+Android Package
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 19 Aug19 Aug
+https://michalsnik.github.io/aos/
+
+AppScript for GoogleSheet.txt
+Text
+
+Portfolio.html
+HTML
+
+Script for GoogleSheet Form.txt
+Text
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 18 Aug18 Aug
+https://fontawesome.com/
+
+BootstrapIntro.html
+HTML
+
+Portfolio.html
+HTML
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 18 Aug18 Aug
+Dear Student,
+
+Kindly keep your camera on during the online class.
+Please note that continued failure to do so may lead to removal from the session.
+Thank you for your understanding.
+
+Join Zoom Meeting
+https://us06web.zoom.us/j/89652813542?pwd=DKRdYZ0a9cjGtC7Avbam9VWEw5k1hM.1
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 17 Aug17 Aug (Edited 17 Aug)
+🎉 INCAPP Success Celebration! 🎉
+
+We are proud to share that our 20 More students are now Oracle Java Certified! 🏆 This is a big achievement.
+If you have not attempted the Oracle Java Certification yet, this is your chance to get inspired and take the next step towards boosting your career with an industry-recognized certification. 💻✨
+
+📌 Stay connected — we will guide you on how to prepare and get certified.
+🚀 Let’s make you the next success story!
+
+— Team INCAPP
+Displaying OCFA Certified Student Photo.JPG
+OCFA Certified Student Photo.JPG
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 13 Aug13 Aug
+codes:
+Displaying Assignment 3 CSS.jpg
+Assignment 3 CSS.jpg
+
+Assignment 4 CSS.jpg
+Image
+
+Assignment 6 CSS.png
+Image
+
+BootstrapIntro.html
+HTML
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 10 Aug10 Aug (Edited 10 Aug)
+https://imaginative-pavlova-e76cd4.netlify.app/
+Displaying Assignment 1- JQ.png
+Assignment 1- JQ.png
+
+AddSubNumber.html
+HTML
+
+ChangeCSS.html
+HTML
+
+ChangeText.html
+HTML
+
+JQ this.html
+HTML
+
+JQEventsClick.html
+HTML
+
+JQEventsFocus-Blur.html
+HTML
+
+JQEventsHover.html
+HTML
+
+JQEventsMouse.html
+HTML
+
+JQEventsON.html
+HTML
+
+Assignment 2.png
+Image
+
+Assignment 3.png
+Image
+
+Assignment 4.png
+Image
+
+Assignment 5.png
+Image
+
+Find-Factorial.png
+Image
+
+Find-Prime.png
+Image
+
+JS Assignment-SI.png
+Image
+
+JS- EvenOdd.png
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 3 Aug3 Aug
+codes:
+
+ArrowFunction.html
+HTML
+
+Window method- setTimeout.html
+HTML
+
+ArrowFunction.js
+JavaScript
+
+EffectAnimateEx.html
+HTML
+
+EffectFadeEx.html
+HTML
+
+EffectHideShowEx.html
+HTML
+
+EffectSlideEx.html
+HTML
+
+EffectSlideEx2.html
+HTML
+
+FirstJQ.html
+HTML
+
+FirstJQ-CDN.html
+HTML
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 3 Aug3 Aug (Edited 3 Aug)
+codes:
+Displaying Login.png
+Login.png
+
+Login-Assignment.html
+HTML
+
+Form PopUp1.png
+Image
+
+Form PopUp2.png
+Image
+
+Timer.png
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 2 Aug2 Aug
+codes:
+Displaying bg.avif
+bg.avif
+
+ConsoleLogTable.js
+JavaScript
+
+DateTimeEx2.html
+HTML
+
+DateTimeEx.html
+HTML
+
+GetElementWays.html
+HTML
+
+LetConstVarEx.html
+HTML
+
+Car Accident.mp3
+Audio
+
+car.png
+Image
+
+car2.png
+Image
+
+CarMoveProject.html
+HTML
+
+tree.png
+Image
+
+Ball JS Assignment.jpg
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 27 Jul27 Jul
+codes:
+Displaying Login-Assignment1.png
+Login-Assignment1.png
+
+EVENT-LoadEvent.html
+HTML
+
+EVENT-MouseEvent-onClick.html
+HTML
+
+ChangeCss.html
+HTML
+
+StringFunctions.js
+JavaScript
+
+ArrayFunctionsEX.html
+HTML
+
+NumberTable.html
+HTML
+
+ArrayEX.html
+HTML
+
+Math-function.html
+HTML
+
+EVENT-FocusBlurEvent.html
+HTML
+
+EVENT-ScrollEvent.html
+HTML
+
+EVENT-MouseEvent-onMouseDownUp.html
+HTML
+
+EVENT-KeyEvent2.html
+HTML
+
+EVENT-KeyEvent1.html
+HTML
+
+EVENT-MouseOverEvent.html
+HTML
+
+EVENT-KeyEvent.html
+HTML
+
+EVENT-ResizeEvent.html
+HTML
+
+Login-Assignment2.png
+Image
+
+Login-Assignment3.png
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 26 Jul26 Jul
+codes:
+
+Window method- setInterval.html
+HTML
+
+Window methods.html
+HTML
+
+BreakContinueEx.html
+HTML
+
+doWhileLoopEx.html
+HTML
+
+ReverseNo.html
+HTML
+
+whileLoopEx.html
+HTML
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 20 Jul20 Jul
+codes:
+Displaying Find-Factorial.png
+Find-Factorial.png
+
+forLoopEx4.html
+HTML
+
+forLoopEx3.html
+HTML
+
+forLoopEx2.html
+HTML
+
+forLoopEx.html
+HTML
+
+forLoopEx.js
+JavaScript
+
+forLoopEx5.html
+HTML
+
+Find-Prime.png
+Image
+
+GreaterAmong6.html
+HTML
+
+SumOfDigitsBetweenTwoNumbers.png
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 13 Jul13 Jul
+codes:
+Displaying JS- 4 No Greater.png
+JS- 4 No Greater.png
+
+SwitchEx.html
+HTML
+
+IfElseIfEx.html
+HTML
+
+NestedIfElseEx2.html
+HTML
+
+IfElseEx2.html
+HTML
+
+IfElseEx.html
+HTML
+
+IfEx.html
+HTML
+
+SI.html
+HTML
+
+NestedIfElseEx.html
+HTML
+
+JS- EvenOdd.png
+Image
+
+JS- Find Day.png
+Image
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 12 Jul12 Jul
+codes:
+Displaying JS Assignment-SquareApp.png
+JS Assignment-SquareApp.png
+
+AddEx.html
+HTML
+
+OperatorsEx2.js
+JavaScript
+
+OperatorsEx1.js
+JavaScript
+
+Operator-Comparision2.js
+JavaScript
+
+Operator-Comparision.js
+JavaScript
+
+Operator-Increment-Decrement.js
+JavaScript
+
+Operator-Shorthand.js
+JavaScript
+
+Operator-Arithmetic2.js
+JavaScript
+
+Operator-Arithmetic.js
+JavaScript
+
+OperatorsEx3.js
+JavaScript
+
+Operator-Conditional.js
+JavaScript
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 6 Jul6 Jul
+codes:
+Displaying JS-Assignment 1.png
+JS-Assignment 1.png
+
+PrinterCall.html
+HTML
+
+PrintingWays.html
+HTML
+
+ChangeText.html
+HTML
+
+Variable.js
+JavaScript
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 5 Jul5 Jul
+codes:
+
+ExternalJSEx.html
+HTML
+
+InlineJSEx.html
+HTML
+
+InternalJSEx.html
+HTML
+
+yash.js
+JavaScript
+
+JS- Rahul Chauhan (INCAPP).pdf
+PDF
+
+Add class comment…
+
+
+Post by incapp incapp
+incapp incapp
+Created 29 Jun29 Jun
+codes:
+Displaying Assignment 6 CSS.png
+Assignment 6 CSS.png
+
+WebKit.html
+HTML
+
+Pseudo-Element.html
+HTML
+
+Pseudo-Class.html
+HTML
+
+TransformWithTransitionEx.html
+HTML
+
+TransformEx.html
+HTML
+
+TransitionEx.html
+HTML
+
+FilterEx.html
+HTML
+
+Nav-HorizontalEx.html
+HTML
+
+CenterSCREEN DivEx.html
+HTML
+
+Angled & Curvy Div.html
+HTML
+
+CenterHorizontal DivEx.html
+HTML
+
+Assignment 7 CSS.JPG
+Image
+
+Assignment 8 CSS.png
+Image
+
+Assignment 9 CSS.jpg
+Image
+
+Assignment 10 CSS.jpg
+Image
+
+Assignment 4 CSS DONE.html
+HTML
+
+Add class comment…
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,8 +633,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- AOS  -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         nav {
             background-color: rgba(255, 255, 255, 0.424) !important;
@@ -33,12 +649,92 @@
             height: 200px;
             border-radius: 50%;
         }
+    </style>
+</head>
 
-        .card p {
-            transition: 1s;
-        }
+<body>
 
-        .card p:hover {
-            transform: scale(1.2);
-            color: rgb(232, 210, 4);
-        }
+    <header>
+        <nav class="navbar navbar-expand-lg border border-dark border-1 rounded-4">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white rounded-start-3 bg-dark px-4 fw-bold" href="#">Xyz</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> -->
+                        <!-- <ul class="navbar-nav mx-auto mb-2 mb-lg-0"> -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#"><i
+                                    class="fa-solid fa-house"></i></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Social
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">LinkedIn</a></li>
+                                <li><a class="dropdown-item" href="#">Github</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <a href="https://wa.me/919811272031?text=Hi%20,%20I%20am%20Xyz%20." class="btn btn-success mx-2"><i
+                            class="fa-brands fa-whatsapp"></i> Whatsapp</a>
+                    <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#myModal">Get In
+                        Touch</button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header bg-success text-white">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Get In Touch</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="mb-1">
+                                            <label class="form-label">Name</label>
+                                            <input type="text" class="form-control" required />
+                                        </div>
+                                        <div class="mb-2">
+                                            <label class="form-label">Phone</label>
+                                            <input type="tel" pattern="[0-9]+" maxlength="10" minlength="10" class="form-control" required />
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="row text-white p-4 pt-5 align-items-center">
+            <div class="col text-end">
+                <img src="https://images.pexels.com/photos/3649765/pexels-photo-3649765.jpeg" alt="">
+            </div>
+            <div class="col">
+                <h3>Xyz Abc</h3>
+                <p>I'm a <span class="text-warning text-uppercase fw-bold text-decoration-underline">Web
+                        Developer</span></p>
+            </div>
+        </div>
+    </header>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/js/bootstrap.bundle.min.js"
+    integrity="sha512-Tc0i+vRogmX4NN7tuLbQfBxa8JkfUSAxSFVzmU31nVdHyiHElPPy2cWfFacmCJKw0VqovrzKhdd2TSTMdAxp2g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Font Awesome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/js/all.min.js"
+    integrity="sha512-gBYquPLlR76UWqCwD06/xwal4so02RjIR0oyG1TIhSGwmBTRrIkQbaPehPF8iwuY9jFikDHMGEelt0DtY7jtvQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+</html>
+Portfolio.html
+Displaying Portfolio.html.
